# trading_lab

./: .env.example  .gitignore  CLAUDE.md  README.md  activate.sh  codex.md  finance_plan.txt  heatmap_plan.txt  macd_raw.txt  mw_plan.txt  now.txt  option_plan.txt  profile_plan.txt  pyproject.toml  requirements-backtest.txt  requirements-core.txt  run_dashboard.sh
.streamlit/: config.toml
dashboard/: app.py  wave_viewer.py
indicators/: __init__.py  cycle_base.py  cycle_multiple.py  flat_chart.py  gaussian_profile.py  kalman.py  volume_profile.py
legacy/: README.md
reports/: BTCUSD_V1_report.txt  SYNTH_report.txt  spy_cycle_reversion_2020_2026.md
scripts/: CODEX_BRINGUP.md  CODEX_GENERALIZATION_PLAN.md  conf_filter_backtest.py  conf_filter_backtest_1.py  expanded_validation_report.py  fetch_fundamentals.py  fetch_ohlcv.py  flat_chart.py  generalization_runner.py  kalman.py  new_strategy.py  run_kalman_pipeline.py  run_kalman_pipeline_1.py  strategy_execution.py  test_backtrader.py  test_data.py  test_generalization_splits.py  test_strategy_execution.py  test_trade_path_analysis.py  test_vectorbt.py  trade_path_analysis.py  volume_profile.py  yoon1b_kalman_overlay_compare.py  yoon1b_sector_universe_compare.py  yoon1f_recovery_cap_compare.py  yoon1f_recovery_filter_compare.py  yoon1g_fast_recovery_sleeve.py  yoon1g_recovery_leverage_compare.py  yoon1h_poc_va_compare.py  yoon1i_sr_gate_compare.py  yoon2_compare.py  yoon2_tp_compare.py  yoon2_vs_yoon1b.py  yoon3_momentum_gate_compare.py
strategies/: __init__.py  cycle_reversion.py
tests/: test_cumulative_data.py  (+11 more)
(+243 files in other folders)
